Fixed heading spacing issue

--- a/src/blocks/advanced-heading/style.scss
+++ b/src/blocks/advanced-heading/style.scss
@@ -14,6 +14,10 @@
 	margin: 0;
 }
 
+.wp-block-uagb-advanced-heading .uagb-separator-wrap {
+	font-size: 0;
+}
+
 .wp-block-uagb-advanced-heading .uagb-separator {
     border-top-style: solid;
     display: inline-block;
@@ -25,3 +29,4 @@
 .wp-block-uagb-advanced-heading .uagb-desc-text {
 	margin: 0;
 }
+
